# simplexds

./: BUILD  LICENSE  Makefile  README.md  WORKSPACE  callbacks.go  go.mod  go.sum  repositories.bzl  server.go  store.go
cmd/simplexds/: BUILD.bazel  main.go
docker/: BUILD
mesh/: BUILD.bazel  clusters.go  endpoints.go  gateway.go  interfaces.go  listener.go  node.go  resources.go  routes.go
