load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "clusters.go",
        "endpoints.go",
        "gateway.go",
        "interfaces.go",
        "listener.go",
        "node.go",
        "resources.go",
        "routes.go",
    ],
    importpath = "github.com/wozz/simplexds/mesh",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_envoyproxy_go_control_plane//envoy/api/v2:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/api/v2/auth:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/api/v2/core:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/api/v2/endpoint:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/api/v2/listener:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/api/v2/route:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/config/filter/network/http_connection_manager/v2:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/type:go_default_library",
        "@com_github_envoyproxy_go_control_plane//pkg/cache:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
    ],
)
