load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/wozz/simplexds/cmd/simplexds",
    visibility = [
        "//docker:__pkg__",
    ],
    deps = ["//:go_default_library"],
)

go_binary(
    name = "simplexds",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
